header z-index fix

--- a/frontend/src/app/routes/home/editor/editor.component.scss
+++ b/frontend/src/app/routes/home/editor/editor.component.scss
@@ -67,7 +67,6 @@
   }
 
   .right {
-    flex: 1 1 auto;
     box-sizing: border-box;
     width: 100%;
     max-width: 52rem;
